Correction mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,6 @@
-
+body {
+	background-color: #2E2E2E !important;
+}
 .pixels {
 	color: black;
 	font-size: 14px;
